# sock-cat

./: .gitignore
client/: CMakeLists.txt  main.cpp
common/inc/: debug.hpp  log.hpp  packet.hpp  safequeue.hpp  sckcomm.hpp  socket.hpp  threadppol.hpp  time.hpp  uuid.hpp
common/src/: log.cpp  packet.cpp  sckcomm.cpp  socket.cpp  uuid.cpp
server/: CMakeLists.txt  db.hpp
server/inc/: db.hpp  gui.hpp
server/src/: db.cpp  gui.cpp  main.cpp
